# mathics-scanner

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.txt  CHANGES.rst  COPYING.txt  ChangeLog-spell-corrected.diff  FUTURE.rst  MANIFEST.in  Makefile  README.rst  implementation.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: autoblack.yml  compile-translation-tables.yml  isort-and-black-checks.yml  macos.yml  mathics.yml  mathics3-doctest.yml  osx.yaml  osx.yml  pyodide.yml  ubuntu.yaml  ubuntu.yml  windows.yml
admin-tools/: check-versions.sh  compile-translation-tables.py  make-JSON-tables.sh  make-dist.sh  make-tables.sh  pyenv-versions  release.sh
docs/source/: api.rst  conf.py  implementation.rst  index.rst  usage.rst
mathics_scanner/: __init__.py  build_tables.py  characters.py  errors.py  escape_sequences.py  feed.py  load.py  location.py  mathics3_tokens.py  prescanner.py  tokeniser.py  version.py
mathics_scanner/data/: .gitignore  OperatorTable.csv  README.rst  boxing-characters.yml  characters.json  named-characters.yml  operators-additional.yml  operators-intro.yml  operators.yml
mathics_scanner/generate/: README.rst  boxing_characters.py  build_box_tables.py  build_operator_tables.py  build_tables.py  named_characters.py  operator_csv_to_yaml.py  operator_csv_to_yml.py  operators.py  rl_inputrc.py
test/: helper.py  test_ascii.py  test_boxing_characters.py  test_character_table_consistency.py  test_codetokenize.py  test_escape_sequences.py  test_feed.py  test_general_yaml_sanity.py  test_grouping.py  test_has_unicode_inverse_sanity.py  test_letterlikes_sanity.py  test_mathics_precedence.py  test_operators.py  test_prescanner.py  test_regular_expressions.py  test_roundtrip.py  test_string_tokens.py  test_table_consistency.py  test_tokeniser.py  test_translation_regressions.py  test_unicode.py  test_unicode_equivalent.py  test_urls.py  test_wl_to_ascii.py  testprecedence.m  util.py
