[build-system]
requires = [
    "setuptools>=70.0.0", # CVE-2024-38335 recommends this
    # needed for building tables for the sdist:
    "PyYAML",
    "click",
]
build-backend = "setuptools.build_meta"

[project]
name = "Mathics_Scanner"
description = "Character Tables and Tokenizer for Mathics and the Wolfram Language."
dependencies = [
    "PyYAML",     # Used in mathics-generate-json-table
    "chardet",    # Used in mathics_scanner.feed
    "click",      # Using in CLI: mathics-generate-json-table
]
requires-python = ">=3.8"
readme = "README.rst"
license = {text = "GPL-3.0-only"}
keywords = ["Mathematica", "Wolfram", "Interpreter", "Shell", "Math", "CAS"]
maintainers = [
    {name = "Mathics3 Group"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Interpreters",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://mathics.org/"

[project.optional-dependencies]
dev = [
    "pytest",
]
full = [
    "ujson",    # Optional Used in mathics_scanner.characters
]

[project.scripts]
mathics-generate-json-table = "mathics_scanner.generate.build_tables:main"

[tool.setuptools]
packages = [
    "mathics_scanner",
    "mathics_scanner.generate",
]

[tool.setuptools.package-data]
"mathics_scanner" = [
    "data/named-characters.yml",
    "data/*.csv",
    "data/characters.json",  # List this explicitly since it is needed
    "data/*.json",
    "data/ExampleData/*",
]

[tool.setuptools.dynamic]
version = {attr = "mathics_scanner.version.__version__"}
